[gd_scene load_steps=10 format=3 uid="uid://jg6wnj4ow2ug"]

[ext_resource type="Script" path="res://scenes/gamescreen/game_screen.gd" id="1_lciny"]
[ext_resource type="LabelSettings" uid="uid://m834upvncr2m" path="res://assets/gm_32_dark.tres" id="1_tv7pg"]
[ext_resource type="Texture2D" uid="uid://dfbfg6o81bnhg" path="res://assets/ui/blue_button00.png" id="2_c2sor"]
[ext_resource type="PackedScene" uid="uid://boyxu7nbxp7oo" path="res://scenes/memorytile/memory_tile.tscn" id="2_hdn2m"]
[ext_resource type="Texture2D" uid="uid://dk04wxnhj84st" path="res://assets/ui/yellow_button00.png" id="3_nebkg"]
[ext_resource type="Texture2D" uid="uid://btb3udgdgm772" path="res://assets/ui/green_button00.png" id="4_2d2ko"]
[ext_resource type="LabelSettings" uid="uid://biqej8ur7x57o" path="res://assets/GM_32_White.tres" id="5_1e7dh"]
[ext_resource type="PackedScene" uid="uid://lau30beis6g8" path="res://scenes/scorer/scorer.tscn" id="8_7tro8"]
[ext_resource type="PackedScene" uid="uid://juvf0iaoakm6" path="res://scenes/gameover/game_over.tscn" id="9_5iunr"]
[ext_resource type="Texture2D" uid="uid://1vah8qjvdu52" path="res://assets/images/backgroundEmpty.png" id="10_background"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lciny")
mem_tile_scene = ExtResource("2_hdn2m")

[node name="BackgroundTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_background")
expand_mode = 2

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC1" type="MarginContainer" parent="HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileContainer" type="GridContainer" parent="HB/MC1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MC2" type="MarginContainer" parent="HB"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_right = 18

[node name="VBoxContainer" type="VBoxContainer" parent="HB/MC2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="HB" type="HBoxContainer" parent="HB/MC2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC2/VBoxContainer/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"
label_settings = ExtResource("1_tv7pg")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="HB/MC2/VBoxContainer/HB"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_tv7pg")
horizontal_alignment = 2

[node name="HB2" type="HBoxContainer" parent="HB/MC2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC2/VBoxContainer/HB2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs"
label_settings = ExtResource("1_tv7pg")
vertical_alignment = 1

[node name="PairsLabel" type="Label" parent="HB/MC2/VBoxContainer/HB2"]
layout_mode = 2
text = "0 / 00"
label_settings = ExtResource("1_tv7pg")
horizontal_alignment = 2

[node name="Spacer" type="Control" parent="HB/MC2/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HB/MC2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_c2sor")
texture_pressed = ExtResource("3_nebkg")
texture_hover = ExtResource("4_2d2ko")

[node name="Label" type="Label" parent="HB/MC2/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "EXIT"
label_settings = ExtResource("5_1e7dh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="AudioStreamPlayer" parent="."]

[node name="Scorer" parent="." instance=ExtResource("8_7tro8")]

[node name="GameOver" parent="." instance=ExtResource("9_5iunr")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HB/MC2/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
